lessons controller and schema updates
